--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   },
   "dependencies": {
     "@formkit/auto-animate": "^0.8.2",
+    "@nuxt/ui-pro": "^3.1.3",
     "@nuxtjs/tailwindcss": "^7.0.0-beta.0",
     "draggable": "^4.2.0",
     "nuxt": "^3.17.5",
+    "nuxt-icons": "^3.2.1",
     "sortablejs": "^1.15.6",
     "vue": "^3.5.16",
     "vue-router": "^4.5.1",
