--- a/package.json
+++ b/package.json
@@ -14,13 +14,16 @@
     "@nuxt/ui-pro": "^3.1.3",
     "@nuxtjs/tailwindcss": "^7.0.0-beta.0",
     "@pinia/nuxt": "^0.11.1",
+    "apexcharts": "^4.7.0",
     "draggable": "^4.2.0",
     "nuxt": "^3.17.5",
+    "nuxt-charts": "^0.1.9",
     "nuxt-icons": "^3.2.1",
     "pinia": "^3.0.3",
     "sortablejs": "^1.15.6",
     "vue": "^3.5.16",
     "vue-router": "^4.5.1",
+    "vue3-apexcharts": "^1.8.0",
     "vuedraggable": "^4.1.0"
   }
 }
