supabae setting up login/signup

--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "@headlessui/vue": "^1.7.16",
     "@heroicons/vue": "^2.0.18",
     "@nuxt/ui": "^2.11.1",
-    "@nuxtjs/supabase": "^1.5.2",
     "@pinia/nuxt": "^0.5.1",
+    "@supabase/supabase-js": "^2.50.0",
     "@vueuse/core": "^10.5.0",
     "@vueuse/nuxt": "^10.5.0",
     "lucide-vue-next": "^0.518.0",
