--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "nuxt": "^3.8.0",
     "pinia": "^2.1.7",
     "vue": "^3.3.8",
+    "vue-cal": "^4.8.0",
     "vue-draggable-next": "^2.2.1",
     "vue-router": "^4.5.1",
     "vuedraggable": "^4.1.0"
