all ready up and running <3

--- a/package.json
+++ b/package.json
@@ -20,9 +20,14 @@
     "@vueuse/core": "^10.5.0",
     "@vueuse/nuxt": "^10.5.0",
     "dayjs": "^1.11.13",
+    "h3": "^1.15.3",
+    "http": "^0.0.1-security",
     "lucide-vue-next": "^0.518.0",
+    "micro": "^10.0.1",
     "nuxt": "^3.8.0",
     "pinia": "^2.1.7",
+    "raw-body": "^3.0.0",
+    "stripe": "^18.2.1",
     "vue": "^3.3.8",
     "vue-cal": "^4.8.0",
     "vue-draggable-next": "^2.2.1",
